# nflreadrs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: downloader.rs  lib.rs  stats.rs  utils.rs
