[package]
name = "nflreadrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
polars = "0.52.0"
reqwest = { version = "0.12.28", features = ["blocking"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }
