[package]
name = "nflreadrs"
version = "0.2.0"
edition = "2024"
description = "Crate to pull data from nflverse's NFL database."
repository = "https://github.com/rednokay/nflreadrs"
license = "MIT"
readme = "README.md"
keywords = ["NFL", "sports", "game-data", "sports-data"]
categories = ["api-bindings", "database"]
exclude = [".github/workflows/ci.yml", ".gitignore"]


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
polars = "0.52.0"
reqwest = { version = "0.12.28", features = ["blocking"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }
